--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        python -m pip install pytest              
+        pip install pytest              
 
   test:
     runs-on: ubuntu-latest
@@ -39,11 +39,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-      
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
       
     - name: Run tests
       run: |
