--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,6 +40,12 @@ jobs:
       with:
         python-version: '3.x'
       
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pytest
+
     - name: Run tests
       run: |
         pytest test_recipe_book.py
