--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run main.py
       run: |
-        python main.py
+        echo 6 | python main.py
 
   test:
     runs-on: ubuntu-latest
